@@ -23,6 +23,7 @@
     or "https", not just if URL contains one of those.
 19. Prioritize browsed menu role when allocating a release to a release type -
     thanks to Darrell.
+20. Try to work-around issues with volume dialog closing immediately.
 
 5.7.6
 -----
